SERVER-19671 - Null chars in namespaces cause issues